# Projek_ROSBD_Kelompok3

./: .gitignore  README.md  SETUP_INIT.md  SETUP_NODE.md  config.py  historis_ingestion.py  hitung_potensi_tsunami.py  init_cassandra_db.py  main.py  plis.ipynb  pyproject.toml  requirements.txt
api/: main.py
checkpoint_dir_cassandra/: .metadata.crc  metadata
checkpoint_dir_cassandra/offsets/: .0.crc  .1.crc  .10.crc  .11.crc  .12.crc  .13.crc  .14.crc  .15.crc  .16.crc  .17.crc  .18.crc  .19.crc  .2.crc  .20.crc  .21.crc  .22.crc  .23.crc  .25.crc  .26.crc  .27.crc  .28.crc  .29.crc  .3.crc  .30.crc  .31.crc  .32.crc  .33.crc  .4.crc  .5.crc  .6.crc  .7.crc  .8.crc  .9.crc  0  1  10  11  12  13  14  (+24 more)
checkpoint_dir_cassandra/sources/0/: .0.crc  0
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  index.css
diagrams/: diagram_alur_penelitian.drawio  diagram_metodologi.drawio
docker/: Dockerfile.producer  Dockerfile.spark-consumer  docker-compose-l2.yml  docker-compose-vps.yml  docker-compose.yml
ml-model/: features.py  latest_features.json  minio_utils.py  retrain_flow.py  seed_and_backfill.py  train.py  train_rf.py
ml-model/spark_rf_model/data/: .part-00000-19e9e068-5b62-4738-a238-a4fe425d41c3-c000.snappy.parquet.crc  (+5 more)
orchestrator/: model_retrain_flow.py
producer/: usgs_producer.py
spark-consumer/: run_spark.bat  stream_processor.py
spark-consumer/checkpoint_dir_cassandra/: .metadata.crc  metadata
spark-consumer/checkpoint_dir_cassandra_dual/: .metadata.crc  metadata
telegram-bot/: bot.py
(+111 files in other folders)
